--- a/MovieWarehouse/Cells/DetailsCell/MovieAndTV/NIBCells/HeaderDetailsTableViewCell.xib
+++ b/MovieWarehouse/Cells/DetailsCell/MovieAndTV/NIBCells/HeaderDetailsTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -43,6 +43,9 @@
                                 <state key="normal">
                                     <imageReference key="image" image="heart" catalog="system" symbolScale="large"/>
                                 </state>
+                                <connections>
+                                    <action selector="favoriteButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="eZV-D9-4Fo"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YfZ-PR-jm7">
                                 <rect key="frame" x="49.5" y="0.0" width="20.5" height="103"/>
@@ -50,6 +53,9 @@
                                 <state key="normal">
                                     <imageReference key="image" image="bookmark" catalog="system" symbolScale="large"/>
                                 </state>
+                                <connections>
+                                    <action selector="watchListButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="4QH-Vc-bo1"/>
+                                </connections>
                             </button>
                         </subviews>
                     </stackView>
@@ -113,10 +119,12 @@
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="backGroundImage" destination="GBB-z9-cSv" id="Upm-ya-HSG"/>
+                <outlet property="favoriteButton" destination="orv-mL-NVc" id="3eW-GG-agR"/>
                 <outlet property="genre" destination="PJa-GR-WfU" id="aUZ-U4-y0z"/>
                 <outlet property="posterImage" destination="oUD-tA-UKj" id="FYg-CK-cjP"/>
                 <outlet property="rateLabel" destination="Y34-EU-HxU" id="jSh-Ke-ZVr"/>
                 <outlet property="title" destination="CkP-Ut-RzT" id="dNV-Ch-Izk"/>
+                <outlet property="watchListButton" destination="YfZ-PR-jm7" id="cwW-6K-jTK"/>
             </connections>
             <point key="canvasLocation" x="191" y="75"/>
         </tableViewCell>
